feat: enhance invitation page with event details and FAQ sections
Add comprehensive event information and FAQ to invitation page. Includes:

- Event details grid showing date and venue information
- Config.json support for centralized event data management
- Travel information section with TAP Air Portugal group ticket details
- FAQ section addressing plus-one policy
- Notice box for upcoming RSVP functionality
- Responsive grid layout for event details (stacks on mobile)
- Improved styling with color

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Guest data (keep private)
+# Guest data and config (keep private)
 invitations/guests.json
+invitations/config.json
 
 # Wrangler/Node
 .wrangler/
