feat: enhance invitation page with background images and improved styling
Add support for custom background images and comprehensive design updates. Includes:

- Background image support via config.json with fixed attachment
- Dark theme for detail boxes and info sections with improved contrast
- Enhanced typography with better font weights and sizing
- Map embed support for venue location display
- Additional FAQ entries for children and accommodation
- Travel information note about booking flights

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Guest data and config (keep private)
 invitations/guests.json
 invitations/config.json
+invitations/images/
 
 # Wrangler/Node
 .wrangler/
