feat: add RSVP functionality with local storage and API support
Add interactive RSVP form to invitation page with dual storage modes. Includes:

- RSVP form with yes/no/maybe options and optional comment field
- localStorage-based storage for local development
- API endpoint integration for production (Cloudflare Worker)
- Current RSVP status display with automatic loading
- Visual feedback for selected options and submission states
- Success/error status messages
- Support for displayName field in

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ invitations/guests.json
 invitations/config.json
 invitations/images/
 
+# Secret admin page
+admin-9f8k2x/
+
 # Wrangler/Node
 .wrangler/
 node_modules/
